<resources>
    <string name="app_name">Modulo3_Zeiterfassung</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Am Neumarkt 3 \nD-41564 Kaarst</string>
    <string name="nav_header_subtitle">Hotline +49 1 51 \-  11 30 69 85</string>
<!--    en dash means: backslash + dash: "\-" because just "-" (dash) gives warning -->
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Zeiterfassung</string>
    <string name="menu_gallery">Events</string>
<!--    <string name="menu_slideshow">Slideshow</string>-->
<!--    <string name="menu_tools">Tools</string>-->
<!--    <string name="menu_share">Share</string>-->
    <string name="menu_send">Send</string>
    <string name="contentDescription">TODO</string>
    <string name="startText">Fortsetzen</string>
    <string name="startWorkText">Arbeitsbeginn</string>

    <string name="endeText">Ende</string>
    <string name="resetText">Reset Zeiten</string>
    <string name="arbeitszeitText">Arbeitszeit</string>
    <string name="pauseText">Pause</string>
    <string name="verbleibendText">verbleibend</string>
    <string name="workZeit">08:00:00</string>
    <string name="breakZeit">01:00:00</string>
    <string name="companyName">modulo3 GmbH</string>

    <string name="desc_textImage">Text</string>
    <string name="desc_background">background</string>
    <string name="personal_nummer">Personal Nummer</string>
    <string name="angefangene_zeit">Angefangene Zeit:</string>
    <string name="showstartedtime">showStartedTime</string>
    <string name="beendete_zeit">Beendete Zeit:</string>
    <string name="showendedtime">showEndedTime</string>
    <string name="veranstaltungen_termine">Veranstaltungen und Termine</string>
    <string name="betriebsfeier">Betriebsfeier:</string>
    <string name="event">Event:</string>
    <string name="buhrzeit1">Uhrzeit</string>
    <string name="buhrzeit2">Uhrzeit</string>
    <string name="edatum1">Datum</string>
    <string name="bdatum1">Datum</string>
    <string name="bort2">Ort</string>
    <string name="bdatum2">Datum</string>
    <string name="bort1">Ort</string>
    <string name="euhrzeit1">Uhrzeit</string>
    <string name="eort1">Ort</string>
    <string name="euhrzeit2">Uhrzeit</string>
    <string name="eort2">Ort</string>
    <string name="edatum2">Datum</string>
    <string name="passwort">Passwort</string>
    <string name="personal_nr">Personal-Nr</string>
    <string name="login">Login</string>
    <string name="pers_nummer">Personal-Nummer</string>
    <string name="login_label">Login</string>
    <string name="anmelden">Anmelden</string>
    <string name="error_login">Please fill any empty fields</string>
    <string name="login_ok">Login successfull</string>


</resources>
